Добавлена интеграция GigaChat API Для выделения ключевых слов в компетенциях